= WeeChat ChangeLog
Sébastien Helleu <flashcode@flashtux.org>


This document lists all changes for each version.

For a list of important changes that require manual action, please look at
http://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
(file 'NEWS' in sources).


== Version 0.4.3 (under dev)

* core: add default keys `meta2-1;3H` / `meta2-1;3F` (alt+home/end) and
  `meta2-23;3~` / `meta2-24;3~` (alt+F11/F12) for xterm
* core: add support of italic text (requires ncurses >= 5.9 patch 20130831)
* core: fix auto-apply of window layout in current window when option
  irc.look.buffer_switch_autojoin is on
* core: fix bind of keys in cursor/mouse context when key starts with "@"
  (remove the warning about unsafe key)
* core: fix truncated prefix when filters are toggled (bug #40204)
* core: add options to customize default text search in buffers:
  weechat.look.buffer_search_{case_sensitive|force_default|regex|where}
* api: fix read of arrays in hdata functions hdata_<type> (bug #40354)
* irc: fix groups in channel nicklist when reconnecting to a server that
  supports more nick prefixes than the previously connected server
* irc: fix auto-switch to channel buffer when doing /join channel (without "#")
* irc: add option irc.look.notice_welcome_tags
* irc: add server option "default_msg_kick" to customize default kick/kickban
  message (task #12777)
* lua: fix crash on calls to callbacks during load of script

== Version 0.4.2 (2013-10-06)

* core: clear whole line before displaying content instead of clearing after
  the end of content (bug #40115)
* core: fix time displayed in status bar (it was one second late) (bug #40097)
* core: fix memory leak on unhook of a print hook (if using tags)
* core: fix computation of columns in output of /help (take care about size of
  time/buffer/prefix)
* core: display day change message dynamically (do not store it as a line in